# automerge_orm

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
crates/automerge_orm/: Cargo.toml
crates/automerge_orm/src/: entity.rs  entity_manager.rs  entity_repository.rs  error.rs  impls.rs  key.rs  keyed.rs  lib.rs  mapped.rs  transaction.rs
crates/automerge_orm/tests/: entity_repository.rs  transaction.rs
crates/automerge_orm_macros/: Cargo.toml
crates/automerge_orm_macros/src/: entity.rs  lib.rs
crates/test_utils/: Cargo.toml
crates/test_utils/src/: env.rs  function.rs  lib.rs
crates/test_utils/src/automerge_repo/: mod.rs  storage.rs
